(maint) Ensure PUPPETDB_JAVA_ARGS works in Docker
 - Provide custom init settings for PDB rather than relying on package
   defaults

   Makes sure PUPPETDB_JAVA_ARGS is actually consumed, like the PE
   variant of this container

   Unlike the PE container, USER and GROUP must be specified

 - Fixes a bug with how gc logging was specified in JAVA_ARGS - the PE
   variant relies on a different JDK version, while this container is
   currently shipping:

openjdk version "1.8.0_275"
OpenJDK Runtime Environment (build 1.8.0_275-8u275-b01-0ubuntu1~18.04-b01)
OpenJDK 64-Bit Server VM (build 25.275-b01, mixed mode)